// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example.replicated.multimap;

option java_outer_classname = "SomeMultiMapDomain";

message SomeKey {
  string key = 1;
}

message SomeValue {
  string value = 1;
}
